...
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="MuzSzafaMac" id="1Xt-HY-uBw">
...
                                <menu key="submenu" title="View" id="bib-Uj-vzu">
                                    <items>
                                        <menuItem title="New client" keyEquivalent="1" id="IAo-SY-fd9">
                                            <connections>
                                                <action selector="newClient:" target="Ady-hI-5gd" id="g9E-Mk-jfO"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="New instrument" keyEquivalent="2" id="tXI-mr-wws">
                                            <connections>
                                                <action selector="newInstrument:" target="Ady-hI-5gd" id="mCa-Nb-Ehs"/>
...
                                </menu>
                            </menuItem>
                            <menuItem title="Data" id="bb9-xu-lYK">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Data" systemMenu="window" id="9ui-bC-ESC">
...
                                            <menu key="submenu" title="Data" systemMenu="window" id="hkt-Ar-7iw">
                                                <items>
                                                    <menuItem title="Import" id="Kg3-PF-gdn">
                                                        <modifierMask key="keyEquivalentModifierMask"/>
                                                        <connections>
...
                                            </menu>
                                        </menuItem>
                                        <menuItem title="Archive" id="Ion-ej-vpT">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <menu key="submenu" title="Data" systemMenu="window" id="vmT-Gi-a91">
...
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="H5d-e0-biw"/>
                                        <menuItem title="Purge" image="NSTrashFull" id="Lhf-cM-aeX">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
            <objects>
                <windowController id="B8D-0N-5wS" customClass="MainWindowController" customModule="MuzSzafaMac" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" title="MuzSzafa" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
...
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0re-Xo-hmN">
                                <rect key="frame" x="342" y="7" width="72" height="32"/>
                                <buttonCell key="cell" type="push" title="Done" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6TN-z8-8kI">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LIC-9Q-t64">
                                <rect key="frame" x="20" y="263" width="19" height="17"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="id:" id="KHa-6Y-iaO">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
...
