"accessories" = "accessories";
"add filters" = "add filters";
"address" = "email";
"available" = "available";
"Cancel" = "Cancel";
"cant_delete_client_with_deals" = "Can't delete client that has assigned deals. Delete deals first!";
"cant_delete_deal_with_payments" = "Can't delete deal that has assigned payments. Delete payments first!";
"cant_delete_instrument_type_with_instruments" = "Can't delete type that is used by at least one instrument. Delete instruments first!";
"cant_delete_instrument_with_deals" = "Can't delete instruments that has assigned deals. Delete deals first!";
"Choose destination dir" = "Choose destionation dir";
"Choose file" = "Choose file";
"Client" = "Client";
"client" = "client";
"clientName" = "name";
"clientSurname" = "surname";
"client_has_no_email" = "Client has no email address!";
"date" = "date";
"days" = "days";
"Deal" = "Deal";
"deal" = "deal";
"dealId" = "deal id";
"deal_id" = "deal id";
"deposit" = "deposit";
"deposit_0" = "not returned";
"deposit_1" = "returned in cash";
"deposit_2" = "returned with credit";
"deposit_return_date" = "deposit return date";
"display_id" = "id";
"Done" = "Done";
"email_pattern_failed_to_open" = "Could not open email pattern";
"Extend deals" = "Extend deals";
"extras" = "accessories";
"failed_installing_new_version" = "Failed installing new version";
"failed_opening_new_version" = "Failed opening new version. You can still do it manually though.";
"failed_removing_old_version" = "Failed removing old version";
"failed_unzipping" = "Failed unzipping new version";
"false" = "no";
"fee" = "fee";
"filter now!" = "filter now!";
"FilterAccess" = "Filter list";
"Filters" = "Filters";
"for_month" = "for month";
"from" = "from";
"fromDate" = "from";
"hours" = "hours";
"id" = "id";
"ignore" = "ignore";
"in_cash" = "form";
"in_cash_1" = "credit card";
"in_cash_1" = "transfer";
"in_cash_0" = "cash";
"in_conflict" = "conflicts";
"invalid_email_pattern" = "Invalid path to email pattern file";
"income" = "income";
"Instrument" = "Instrument";
"instrument" = "instrument";
"instrumentId" = "id";
"instrumentName" = "name";
"InstrumentType" = "Instrument Type";
"keeps_asset" = "keeps asset";
"minutes" = "minutes";
"mode_per_day" = "single day";
"mode_per_month" = "entire month";
"modify" = "Modify";
"money_amount" = "amount";
"months" = "months";
"name" = "name";
"n_values" = "values";
"new_deal_howto" = "In order to create new deal, you need to drag a client from the left table and drop them onto instrument from the right table.";
"no_client_selected" = "No client is selected";
"no_deal_selected" = "No deal is selected";
"no_instrument_selected" = "No instrument is selected";
"no_payment_selected" = "No payment is selected";
"notes" = "notes";
"one_value" = "value";
"Open" = "Open";
"order" = "order";
"order_off" = "descending";
"order_on" = "ascending";
"other_clients" = "other clients";
"paidMonths" = "paid months";
"paid" = "paid";
"paid_at" = "paid at";
"parent_accessory" = "bundled with";
"Payment" = "Payment";
"payment" = "payment";
"physical_id" = "physical id";
"price" = "worth";
"pricing" = "pricing";
"purge_warning" = "Are you sure you want to purge data? It will remove EVERYTHING. It's recommended to make a backup archive before!";
"real_income" = "actual income";
"remove filters" = "remove filters";
"Save" = "Save";
"separator_character" = "Separator character:";
"Settings" = "Settings";
"show_more" = "show more";
"single term length:" = "single term length:";
"size" = "size";
"status" = "status";
"status_0" = "Negotiated";
"status_1" = "Settled";
"status_2" = "Termination declared";
"status_3" = "Terminated";
"status_4" = "Unsuccessful";
"status_5" = "status";
"sort now!" = "sort now!";
"summary_mode" = "mode";
"summary_mode_0" = "valid at minute";
"summary_mode_1" = "valid at day";
"summary_mode_2" = "valid at month";
"summary_mode_3" = "valid at month at settlement day";
"summary_mode_4" = "for payment day";
"summary_mode_5" = "ends at day";
"summary_mode_6" = "ends at month";
"summary_mode_7" = "ends at month at settlement day";
"surname" = "surname";
"term_begin" = "for term from";
"term_end" = "for term to";
"Terminate deals" = "Terminate deals";
"to" = "to";
"toDate" = "to";
"toggle_no" = "no";
"toggle_yes" = "yes";
"true" = "yes";
"type" = "type";
"update_fail"="Update failed";
"update_text"="Do you want to download update now? It will cause application to restart";
"update_title"="Update available";
"years" = "years";
"Help:Instrument:id"="";
"Help:Instrument:physical_id"="";
"Help:Instrument:instrumentName"="";
"Help:Instrument:type"="";
"Help:Instrument:size"="";
"Help:Instrument:available"="";
"Help:Instrument:deposit"="";
"Help:Instrument:price"="";
"Help:Instrument:fee"="";
"Help:Instrument:accessories"="";
"Help:Instrument:parent_accessory"="";
"Help:Instrument:notes"="";
"Help:Client:id"="";
"Help:Client:name"="";
"Help:Client:surname"="";
"Help:Client:tel"="";
"Help:Client:email"="";
"Help:Client:notes"="";
"Help:Deal:id"="";
"Help:Deal:status"="";
"Help:Deal:keeps_asset"="";
"Help:Deal:pricing"="";
"Help:Deal:from"="";
"Help:Deal:client"="";
"Help:Deal:instrument"="";
"Help:Deal:payment"="";
"Help:Deal:deposit"="";
"Help:Deal:deposit_return_date"="";
"Help:Deal:notes"="";
"Help:InstrumentType:type"="";
"Help:NewDeal:in_conflict"="";
"Help:Payment:id"="";
"Help:Payment:paid"="";
"Help:Payment:paid_at"="";
"Help:Payment:term_begin"="";
"Help:Payment:term_end"="";
"Help:Payment:in_cash"="";
"Help:Payment:money_amount"="";
"Help:Payment:deal"="";
