...
public func dialogOKCancel(msg: String, text: String="") -> Bool {
	return dialogOKCancel(localMsg: getLocalizedString(for: msg),
						  localText: getLocalizedString(for: text))
}
public func dialogOKCancel(localMsg: String, localText: String="") -> Bool {

    let alert = NSAlert()
    alert.messageText = localMsg
    alert.informativeText = localText
    alert.alertStyle = .warning
    alert.addButton(withTitle: "OK")
    alert.addButton(withTitle: getLocalizedString(for: "Cancel"))
	if !Thread.isMainThread{
		return DispatchQueue.main.sync() {
			return alert.runModal() == .alertFirstButtonReturn
		}
	}
...
